Refactored to add InterCardinal.java Flushed out methods to gather sensory data